--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,9 +20,11 @@ jobs:
         run: |
           wget https://raw.githubusercontent.com/foundryvtt/pf2e/master/static/lang/en.json -O ./.github/en.json
           wget https://raw.githubusercontent.com/foundryvtt/pf2e/master/static/lang/re-en.json -O ./.github/re-en.json
+          wget https://raw.githubusercontent.com/foundryvtt/pf2e/master/static/lang/action-en.json -O ./.github/action-en.json
+          wget https://raw.githubusercontent.com/foundryvtt/pf2e/master/static/lang/kingmaker-en.json -O ./.github/kingmaker-en.json
         
       - name: Add & Commit
         uses: EndBug/add-and-commit@v7.2.1
         with:
-          add: "['.github/en.json', '.github/re-en.json']"
+          add: "['.github/en.json', '.github/re-en.json', '.github/action-en.json', '.github/kingmaker-en.json']"
           branch: main
