--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   ZIP_FILENAME: "pf2e_cn"
-  PACKAGE_CONTENT: "module.json cn.json re-cn.json"
+  PACKAGE_CONTENT: "module.json cn.json re-cn.json kingmaker-zh_Hans.json action-zh_Hans.json"
   PACKAGE_ID: 827
 
 jobs:
