--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,13 +18,13 @@ jobs:
 
       - name: Update Projects Source Json
         run: |
-          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/en.json -O ./.github/en.json
-          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/re-en.json -O ./.github/re-en.json
-          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/action-en.json -O ./.github/action-en.json
-          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/kingmaker-en.json -O ./.github/kingmaker-en.json
+          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/en.json -O ./en/en.json
+          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/re-en.json -O ./en/re-en.json
+          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/action-en.json -O ./en/action-en.json
+          wget https://raw.githubusercontent.com/foundryvtt/pf2e/refs/heads/v13-dev/static/lang/kingmaker-en.json -O ./en/kingmaker-en.json
         
       - name: Add & Commit
         uses: EndBug/add-and-commit@v7.2.1
         with:
-          add: "['.github/en.json', '.github/re-en.json', '.github/action-en.json', '.github/kingmaker-en.json']"
+          add: "['./en/en.json', './en/re-en.json', './en/action-en.json', './en/kingmaker-en.json']"
           branch: main
